last commit, fixed some alignment issues and some flexbox issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,13 +22,13 @@ header {
     font-family: 'Inter', 'Montserrat', sans-serif;
     background: rgb(243, 62, 122);
     color: white;
-    padding: 40px;
     justify-content: center;
     align-content: space-around;
     text-align: left;
     display: flex;
     flex-wrap: wrap;
-    max-height: 200px;
+    max-height: 100vh;
+    max-width: 100vh;
     border: 2px solid black;
     -webkit-text-stroke: 1px black;
 }
@@ -104,11 +104,11 @@ article {
     padding: 40px;
     justify-content: center;
     justify-items: center;
-    max-height: 1000px;
+    max-height: 900px;
     border: 2px solid black;
     -webkit-text-stroke: 1px black;
     overflow: hidden;
-    max-width: 1000px;
+    max-width: 900px;
     font-weight: bold;
     margin-top: 10px
 }
@@ -121,31 +121,12 @@ article {
     width: 900px;
 }
 
-/* changes the appearance of the .slider class scroll bar, sets its height and width*/
-.slider::-webkit-scrollbar {
-    width: 5px;
-    height: 15px;
-}
-
-/* changes the appearance of the draggable part of the scroll bar
-in this case it makes it black, and rounds out its corners */
-
-.slider::-webkit-scrollbar-thumb {
-    background: black;
-    border-radius: 15px;
-}
-
-/*fades out the track behind the scrolls bar */
-.slider::-webkit-scrollbar-track {
-    background: transparent;
-}
-
 /* selects all the section elements under the .slider class and applies these rules*/
 .slider > section {
     scroll-snap-align: center;
     flex-shrink: 0;
-    width: 850px;
-    height: 850px;
+    width: 900px;
+    height: 900px;
     margin-right: 300px;
     border-radius: 10px;
     position: relative;
@@ -165,14 +146,12 @@ I will have to figure out a better way to do something like this.*/
     line-height: 1;
     overflow-x: hidden;
     justify-content: space-evenly;
-
 }
 
 #aboutme h2 {
     border-right: 5px solid white;
     padding: 30px;
     margin-right: 20px;
-    
 }
 
 #aboutme strong {
@@ -182,13 +161,13 @@ I will have to figure out a better way to do something like this.*/
 #projects {
     display: flex;
     flex-wrap: wrap;
-    flex: 0 1 auto;
+    flex: 5;
     flex-direction: row;
     justify-content: center;
     align-content: center;
     align-items: center;
-    position: relative;
     margin-left: 345px;
+    max-height: 100vh;
 }
 
 #projects a:hover {
@@ -224,17 +203,16 @@ I will have to figure out a better way to do something like this.*/
     max-width: 300px;
     width: 90%;
     border: 2px solid black;
-    gap: 10px;
+    max-height: inherit;
 }
 
 #horiseon img {
     min-width: 600px;
-    width: 30%;
 }
 
 #horiseon h3 {
     position: absolute;
-    bottom: 55%;
+    bottom: 51.5%;
     padding: 5px;
     border: 1px solid black;
     background-color: rgba(243, 62, 122, 1);
@@ -243,7 +221,7 @@ I will have to figure out a better way to do something like this.*/
 
 #project2 h3 {
     position: absolute;
-    bottom: 33%;
+    bottom: 31.5%;
     padding: 5px;
     border: 1px solid black;
     background-color: rgba(243, 62, 122, 1);
@@ -252,7 +230,7 @@ I will have to figure out a better way to do something like this.*/
 
 #project3 h3 {
     position: absolute;
-    bottom: 33%;
+    bottom: 31.5%;
     padding: 5px;
     border: 1px solid black;
     background-color: rgba(243, 62, 122, 1);
@@ -310,5 +288,6 @@ footer {
     width: 1000px;
     background: rgb(243, 62, 122);
     color: white;
+    font-size: 30px;
     -webkit-text-stroke: 1px black;
 }
